# blurg-cli

./: LICENSE  README.md  pyproject.toml
templates/: main.py
templates/core/: config.py
templates/db/: base.py  init_db.py  session.py
