[tool.poetry]
name = "blurg-cli"
version = "0.1.0"
description = ""
authors = ["jlugao <joaolhullier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
Jinja2 = "^2.10.3"

[tool.poetry.dev-dependencies]
mkdocs = "^1.0.4"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
